# sigpp

./: CMakeLists.txt
include/audio/: wav.hpp
include/wavelet/: Haar.hpp
src/: Haar.cpp
src/audio/: wav.cpp
tests/: Haar.cpp  main.cpp
tests/audio/: wav.cpp
tests/wavelet/: Haar.cpp
